Added support for triggering when rewinding/paused/playing. Fixed several bugs found along the way.